RESOLVED FIXED118436
WKPageFindStringMatches with kWKFindOptionsBackwards still doesn't work
https://bugs.webkit.org/show_bug.cgi?id=118436
Summary WKPageFindStringMatches with kWKFindOptionsBackwards still doesn't work
Sam Weinig
Reported 2013-07-05 16:17:02 PDT
WKPageFindStringMatches with kWKFindOptionsBackwards still doesn't work
Attachments
Patch (1.92 KB, patch)
2013-07-05 16:19 PDT, Sam Weinig
thorton: review+
Sam Weinig
Comment 1 2013-07-05 16:19:28 PDT
Sam Weinig
Comment 2 2013-07-05 16:22:07 PDT
Note You need to log in before you can comment on or make changes to this bug.