WKPageFindStringMatches with kWKFindOptionsBackwards still doesn't work <rdar://problem/13881024> https://bugs.webkit.org/show_bug.cgi?id=118436

Reviewed by Tim Horton.

* page/Page.cpp:
(WebCore::Page::findStringMatchingRanges):
- When searching backwards, use END_TO_START rather than START_TO_END.
- If there is no selection and we are searching backwards, we now select the last item,
  not the first.


Canonical link: https://commits.webkit.org/136421@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152430 268f45cc-cd09-0410-ab3c-d52691b4dbfc